Fix URL deprecation in OhInfXmlValidationCheck
Signed-off-by: Wouter Born <github@maindrain.net>