@@ -18,6 +18,7 @@ import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Path;
 import java.util.HashMap;
@@ -167,9 +168,9 @@ public class OhInfXmlValidationCheck extends AbstractOhInfXmlCheck {
 
     private Schema getXSD(String schemaUrlString, CachingHttpClient<Schema> client) {
         try {
-            URL schemaUrl = new URL(schemaUrlString);
+            URL schemaUrl = URI.create(schemaUrlString).toURL();
             return client.get(schemaUrl);
-        } catch (IOException e) {
+        } catch (IllegalArgumentException | IOException e) {
             logger.error("Unable to get XSD file {} : {}", schemaUrlString, e.getMessage(), e);
             return null;
         }
